--- a/pracice_mlflow_dagshub.ipynb
+++ b/pracice_mlflow_dagshub.ipynb
@@ -1,17 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "b4f9d400",
-   "metadata": {},
-   "source": [
-    "<h2 align='center'></h2>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5eb3c2b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,51 +20,37 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0878fc4c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([0, 1]), array([900, 100]))"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Step 1: Create an imbalanced binary classification dataset\n",
-    "X, y = make_classification(n_samples=1000, n_features=10, n_informative=2, n_redundant=8, \n",
-    "                           weights=[0.9, 0.1], flip_y=0, random_state=42)\n",
+    "# Create an imbalnced binary classification dataset\n",
+    "# X, y = make_classification(n_samples=10000, n_features=8, n_classes=2, \n",
+    "#                            weights=[0.9, 0.1], random_state=42, flip_y=0)\n",
     "\n",
-    "np.unique(y, return_counts=True)"
+    "X, y = make_classification(n_samples=1000, n_features=10, n_informative=2, n_redundant=8, \n",
+    "                           weights=[0.9, 0.1], flip_y=0, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2a6b80dd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split the dataset into training and testing sets\n",
+    "# Split the data into train and test\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, stratify=y, random_state=42)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f3a6191b",
    "metadata": {},
    "source": [
-    "#### Handle class imbalance"
+    "<h3>Handle Imbalance</h3>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3190fd47",
    "metadata": {},
    "outputs": [
     {
@@ -91,22 +68,21 @@
     "from imblearn.combine import SMOTETomek\n",
     "\n",
     "smt = SMOTETomek(random_state=42)\n",
+    "\n",
     "X_train_res, y_train_res = smt.fit_resample(X_train, y_train)\n",
     "np.unique(y_train_res, return_counts=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "75b6f715",
    "metadata": {},
    "source": [
-    "### Track Experiments"
+    "<h4>Track experiments</h4>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1eb49554",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,13 +120,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
-   "id": "a91ad5ae",
    "metadata": {},
    "outputs": [],
    "source": [
     "reports = []\n",
-    "\n",
     "for model_name, params, model, train_set, test_set in models:\n",
     "    X_train = train_set[0]\n",
     "    y_train = train_set[1]\n",
@@ -167,7 +148,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "08741b0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,18 +158,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "503f6e93",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Accessing as dhavalsays\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Initialized MLflow to track repo <span style=\"color: #008000; text-decoration-color: #008000\">\"ranjithkumarneeruganti/mlflow_dagshub\"</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "Accessing as dhavalsays\n"
+       "Initialized MLflow to track repo \u001b[32m\"ranjithkumarneeruganti/mlflow_dagshub\"\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -198,24 +177,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Initialized MLflow to track repo <span style=\"color: #008000; text-decoration-color: #008000\">\"learnpythonlanguage/mlflow_dagshub_demo\"</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Repository ranjithkumarneeruganti/mlflow_dagshub initialized!\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "Initialized MLflow to track repo \u001b[32m\"learnpythonlanguage/mlflow_dagshub_demo\"\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Repository learnpythonlanguage/mlflow_dagshub_demo initialized!\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "Repository learnpythonlanguage/mlflow_dagshub_demo initialized!\n"
+       "Repository ranjithkumarneeruganti/mlflow_dagshub initialized!\n"
       ]
      },
      "metadata": {},
@@ -226,56 +192,66 @@
     "# dagshub setup\n",
     "\n",
     "import dagshub\n",
-    "dagshub.init(repo_owner='learnpythonlanguage', repo_name='mlflow_dagshub_demo', mlflow=True)"
+    "dagshub.init(repo_owner='ranjithkumarneeruganti', repo_name='mlflow_dagshub', mlflow=True)\n",
+    "# dagshub.init(repo_owner='learnpythonlanguage', repo_name='mlflow_dagshub_demo', mlflow=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "cfcc9a19",
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/08/01 11:50:40 INFO mlflow.tracking.fluent: Experiment with name 'Anomaly Detection' does not exist. Creating a new experiment.\n"
+      "2024/08/23 08:29:10 WARNING mlflow.models.model: Input example should be provided to infer model signature if the model signature is not provided when logging the model.\n",
+      "2024/08/23 08:29:11 INFO mlflow.tracking._tracking_service.client: 🏃 View run Logistic Regression at: https://dagshub.com/ranjithkumarneeruganti/mlflow_dagshub.mlflow/#/experiments/0/runs/8c49bbe408f94649832c22e1eee32fc5.\n",
+      "2024/08/23 08:29:11 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: https://dagshub.com/ranjithkumarneeruganti/mlflow_dagshub.mlflow/#/experiments/0.\n",
+      "2024/08/23 08:29:17 WARNING mlflow.models.model: Input example should be provided to infer model signature if the model signature is not provided when logging the model.\n",
+      "2024/08/23 08:29:18 INFO mlflow.tracking._tracking_service.client: 🏃 View run Random Forest at: https://dagshub.com/ranjithkumarneeruganti/mlflow_dagshub.mlflow/#/experiments/0/runs/cb131d6af1a64298ae256e37dfc8e03c.\n",
+      "2024/08/23 08:29:18 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: https://dagshub.com/ranjithkumarneeruganti/mlflow_dagshub.mlflow/#/experiments/0.\n",
+      "2024/08/23 08:29:25 WARNING mlflow.models.model: Input example should be provided to infer model signature if the model signature is not provided when logging the model.\n",
+      "2024/08/23 08:29:25 INFO mlflow.tracking._tracking_service.client: 🏃 View run XGBClassifier at: https://dagshub.com/ranjithkumarneeruganti/mlflow_dagshub.mlflow/#/experiments/0/runs/994f8f3292ff4f25a9e0ba7033887eca.\n",
+      "2024/08/23 08:29:25 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: https://dagshub.com/ranjithkumarneeruganti/mlflow_dagshub.mlflow/#/experiments/0.\n",
+      "2024/08/23 08:29:32 WARNING mlflow.models.model: Input example should be provided to infer model signature if the model signature is not provided when logging the model.\n",
+      "2024/08/23 08:29:33 INFO mlflow.tracking._tracking_service.client: 🏃 View run XGBClassifier With SMOTE at: https://dagshub.com/ranjithkumarneeruganti/mlflow_dagshub.mlflow/#/experiments/0/runs/5532a860ff294334b128bc0a43563f70.\n",
+      "2024/08/23 08:29:33 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: https://dagshub.com/ranjithkumarneeruganti/mlflow_dagshub.mlflow/#/experiments/0.\n"
      ]
     }
    ],
    "source": [
-    "# Ideally you will not require following 4 lines if you have started fresh and do not have any previous dagshub credentials on your computer\n",
-    "import os\n",
-    "os.environ['MLFLOW_TRACKING_USERNAME'] = 'your user name' # 'learnpythonlanguage'\n",
-    "os.environ['MLFLOW_TRACKING_PASSWORD'] = 'your password' # \n",
-    "os.environ['MLFLOW_TRACKING_URI'] = 'your dagshub unique uri' # https://dagshub.com/learnpythonlanguage/mlflow_dagshub_demo.mlflow\n",
-    "\n",
-    "# Initialize MLflow\n",
-    "mlflow.set_experiment(\"Anomaly Detection\")\n",
-    "# mlflow.set_tracking_uri(\"http://localhost:5000\")\n",
+    "# Initialize mlflow\n",
+    "mlflow.set_experiment('Anamoly Detection')\n",
+    "# mlflow.set_tracking_uri('http://localhost:5000')\n",
     "\n",
     "for i, element in enumerate(models):\n",
     "    model_name = element[0]\n",
     "    params = element[1]\n",
     "    model = element[2]\n",
     "    report = reports[i]\n",
-    "    \n",
-    "    with mlflow.start_run(run_name=model_name):        \n",
+    "\n",
+    "    with mlflow.start_run(run_name=model_name):\n",
     "        mlflow.log_params(params)\n",
     "        mlflow.log_metrics({\n",
-    "            'accuracy': report['accuracy'],\n",
-    "            'recall_class_1': report['1']['recall'],\n",
-    "            'recall_class_0': report['0']['recall'],\n",
-    "            'f1_score_macro': report['macro avg']['f1-score']\n",
-    "        })  \n",
-    "        \n",
-    "        if \"XGB\" in model_name:\n",
-    "            mlflow.xgboost.log_model(model, \"model\")\n",
+    "            'accuracy':report['accuracy'], \n",
+    "            'recall_class_0':report['0']['recall'],\n",
+    "            'recall_class_1':report['1']['recall'],\n",
+    "            'f1_score_macro':report['macro avg']['f1-score']\n",
+    "        })\n",
+    "\n",
+    "        if 'XGB' in model_name:\n",
+    "            mlflow.xgboost.log_model(model, 'model')\n",
     "        else:\n",
-    "            mlflow.sklearn.log_model(model, \"model\")  "
+    "            mlflow.sklearn.log_model(model, 'model')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -298,5 +274,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 2
 }
